[tool.poetry]
name = "cryptography"
version = "0.1.0"
description = "a tour of cryptography throughout the years and its implementations (in python)"
authors = ["vnpedroso <npp.vinicius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pycryptodome = "^3.20.0"
pydantic = "^2.7.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
